# climsoft-api

./: .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.mariadb  MANIFEST.in  Makefile  README.md  deployment.yml  deployment.yml.sample  docker-compose.reference.yml  docker-compose.test.yml  docker-compose.yml  dockerfile  entrypoint.sh  initdb.py  play.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/worflows/: run_tests.yml
.github/workflows/: run_tests.yml
scripts/: backup-db.sh  install-docker-compose.sh  install-docker.sh  restore-db.sh
src/climsoft_api/: config.py  db.py  main.py  play.py
src/climsoft_api/api/: __init__.py  deps.py  schema.py
src/climsoft_api/middlewares/: auth.py  localization.py
swagger/: openapi.json
tests/: conftest.py
tests/datagen/: acquisitiontype.py  climsoftuser.py  data_form.py  faultresolution.py  featuregeographicalposition.py  flag.py  form_agro1.py  form_daily2.py  form_hourly.py  form_hourly_time_selection.py  form_hourlywind.py  form_monthly.py  form_synoptic2_tdcf.py  form_synoptic_2_ra1.py  instrument.py  instrumentfaultreport.py  instrumentinspection.py  obselement.py  observationfinal.py  observationinitial.py  obsscheduleclass.py  paperarchive.py  paperarchivedefinition.py  physicalfeature.py  physicalfeatureclass.py  qcstatusdefinition.py  qctype.py  regkey.py  station.py  stationelement.py  stationlocationhistory.py  stationqualifier.py  synopfeature.py
tests/integration/: conftest.py
tests/snapshot/: conftest.py
tests/unit/: test_schema_translator.py
(+162 files in other folders)
