[tool.poetry]
name = "climsoft-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
python-jose = "^3.3.0"
SQLAlchemy = "^1.4.29"
inflection = "^0.5.1"
opencdms = {git = "https://github.com/Shaibujnr/pyopencdms.git", rev = "remove-other-setups"}
passlib = "^1.7.4"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
Faker = "^11.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
